--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".EventView"
+            android:label="@string/title_activity_event_view" >
+        </activity>
+        <activity
+            android:name=".IgnoreList"
+            android:label="@string/title_activity_ignore_list" >
+        </activity>
     </application>
 
 </manifest>
