--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.huscii.fornow" >
 
-    <!--Permission for Firebase to access the internet-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COURSE_LOCATION" />
+    <!-- Permission for Firebase to access the internet -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +25,10 @@
         <activity
             android:name=".IgnoreList"
             android:label="@string/title_activity_ignore_list" >
+        </activity>
+        <activity
+            android:name=".createNewEventActivity"
+            android:label="@string/title_activity_create_new_event" >
         </activity>
     </application>
 
